# hetic_git_fouad

./: .coverage  .gitignore  README.md  bonnePratique.txt  cat_file.py  cli.py  commit.py  fichier.txt  gitBis.py  gitPorcelaineVSPlomberie.txt  git_scratch.py  hashObjectGit.py  init.py  integration.md  log.py  main.py  nouveau_test.txt  objects.py  pyproject.toml  quick_start.sh  requirements.txt  run_tests.py  setup.py  show_ref.py  status.py  test1.txt  test2.txt  test3.txt  test_gitBis.py  test_git_scratch.py  write_tree.py
.mon_git/: index  index.txt
.mon_git/refs/heads/: feature-test.txt  main.txt
ComprendreLeProjet/: bonjour.py
ComprendreLeProjet/FouadLamnaouar/: bonjour_argparse.py  bonjour_argparse2.py
Organisation du projet/: Explication.txt
documentation/: ExplicationArchitecture.md  README_DOC.txt
src/commands/: add.py  cat_file.py  checkout.py  gitignore.py  hash_object.py  hash_object_cmd.py  index.py  init.py  log.py  ls_tree.py  objects.py  porcelain.py  reset.py  rev_parse.py  show_ref.py  status.py  workspace.py  write_tree.py
src/core/: hash_object.py
src/utils/: extensions.py
test/: mytest.txt
tests/: README.md  __init__.py  test_add.py  test_cat_file.py  test_checkout.py  test_commit.py  test_hash_object.py  test_init.py  test_log.py  test_ls_tree.py  test_reset.py  test_show_ref.py  test_status.py
tests/utils/: __init__.py  test_helpers.py
